--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "uda",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "main": "src/index.js",
+  "module": "dist/index.js",
+  "files": ["dist", "README.md"],
+  "repository": {
+    "type": "git",
+    "url": "https://urbandataanalytics.github.io/udaMap/"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "homepage": "./",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
     "leaflet": "^1.3.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-leaflet": "^2.0.1",
     "react-scripts": "1.1.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "homepage": "./"
+  }
 }
