--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "./"
+  "homepage": "./",
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  }
 }
